styles.css
body {
  background-color:#f0f0f0;
  /* font-family: 'Open Sans'; */
}


.row{
  margin-left: 0;
  margin-right: 0;
}

.footer{
  margin-top: 2rem;

  height: 3rem;
  background-color: #343a40;
  text-align: center;

}
.footer-text{
  padding-top: 1rem;
  color: white;
  margin-bottom: 0;
}
/* Search Bar */

.search-input{
  border-radius: 18px;
  position: relative;
  margin: 0 auto;
  font-size: 1.1rem;
  font-style: italic;
  padding-left: 1rem;
}

.search-bar{
  border-radius: 20px;
  margin: 1.4rem auto;
  position: relative;
}
.search-button{
  border-radius: 20px;
  position: absolute;
  right:1rem;
  top: 0;
}


/* User Input Section */
.user-input{
  background-color: #f0f0f0;
  margin: 0 auto;
}
.input-area{
width:100%;
border:2px solid #D4D3D2;
padding: 0.5rem 1rem;

}
.title-input{
  border-bottom: none;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  font-size: 1.3rem;
}
.desc-input{
  border-top: none;
  border-bottom-left-radius:10px;
  border-bottom-right-radius:10px;
  font-size: 1.1rem;
  max-height: 250px;
}


.dropdown-button{
  border-radius: 20px;
}

.category-input{
  width: 220px;
}

.submit-button{
  /* height:38px; */
  border-radius: 20px;
  margin-top: 0.2rem;
  width: 5rem;
}

/* Feed Section */
.feed{
  /* padding:1rem 15%; */
  width:50%;
  margin: 1rem auto;
}

/* Post Section */
.post{
  padding:1rem;
}

.vote-column{
  text-align: center;
  float: left;
}
.content-column{
  float:right
}

/* Vote Icons on Hover */
.fas:hover{
  text-shadow: 2px 2px 5px #0f0f0f;
}



/* Single Post Page */

/* Main Post */
.post-comment{
  padding: 1rem 2rem;
}
.vote-section{
  float: left ;
}
.time-section{
  float: right ;
}
.no-padding-btn{
  padding:0;
}
.comment-area{
  border-radius: 10px;
  max-height: 200px;
}

/* Comments Display  */

.user-comments{
  margin-top: 1rem;
}
.comment-box{
  padding:0 1rem 1rem;
}

/* Recommended Posts Section */

.recommended h4{
  padding: 0rem 0 0 0.8rem;
}
.related{
  padding: 2rem 0.5rem;

}
.related-post{
  padding: 0.5rem 0.5rem;
  margin: 0.25rem 0;
  /* border: solid grey 1px;
  border-radius: 8px; */
}


/* Sign Up Page */

.form-signin{
  margin: 2rem auto;
  text-align: center;
  align-content: center;
}
.signin-btn{
  text-align:center;
  margin: 0.5rem 0rem 0.5rem;
  /* padding: */

}

/* Profile Page */
.userposts{
  margin:1rem auto;
  padding: 1rem 1.5rem;
  position: relative;
  /* border: solid 1.2px grey; */
  border-radius: 15px;

}

.comment{
  margin:1rem auto;
  padding: 1rem 1.5rem;
  position: relative;
  background: #E5E5E5;
  /* border: solid 1.2px grey; */
  border-radius: 15px;

}

.uservote{
  /* display: table-column; */
  float: left;
  padding:0.5rem 1rem 0.5rem 0;
  position: relative;
  vertical-align: middle;
  text-align: center;
  height: 100%;
}
.title-desc.h4 {
  padding: 0 0.5rem;

}
.username-profile{
  width:60%;
}

.user-stats-parent{
  text-align: center;
  width: 60%;
  margin: 2rem auto 3rem ;

}
.user-stats-parent hr{
border: solid grey 0.6px;
}

.user-stats{
  margin: 1rem 2rem 3rem ;
  padding: 1rem 0.8rem 0.8rem;
  border: solid grey 2px;
  border-radius: 5px;
  display: inline-block;
  width: 12rem;
  height: 8rem;

}


/* Search Bar Profile */

.search-bar-profile{
  border-radius: 20px;
  margin: 1.4rem auto;
  position: relative;
}
.search-button-profile{
  border-radius: 20px;
  position: absolute;
  right:1rem;
  top: 0;
}

/* Admin Page */
.notice-entry{
  margin:2rem 0;
}

.section-header{
  width: 60%;
  margin: 0 auto;
}

.table-responsive{
  /* text-align: center; */
  width: 60%;
  margin: 2rem auto;
}

.filler{
  height: 17rem;
}


/* Edit Page */
.title-input-edit{
  /* border-bottom: none; */
  border-radius: 10px;
  /* border-top-right-radius: 10px; */
  font-size: 1.3rem;
  height: 60px;
  max-height: 200px;
}
.desc-input-edit{
  /* border-top: none; */
  border-radius:10px;
  /* border-bottom-right-radius:10px; */
  font-size: 1.1rem;
  height: 300px;
  max-height: 600px;
}

